--- a/styles.less
+++ b/styles.less
@@ -1021,45 +1021,18 @@ body {
       }
 
       .quote-call {
-        .center();
-        width: 100%;
-        height: 50vh;
-        background-image: url("img/BANNER-ORÇAMENTO-1.png");
-        background-size: cover;
-
         .content-quote-call {
-          .center_column();
-          width: 40%;
-          height: 100%;
-
           article {
-            text-align: center;
-            margin: 0 0 32px 0;
-
             p {
-              font-size: @Paragraph_G;
-              color: @LightGray;
-              margin: 16px 0;
+              font-size: @Paragraph_M;
             }
           }
 
           button {
-            width: 100%;
-            max-width: 400px;
-            height: 50px;
-            background-color: @Green;
-            border: none;
-
-            cursor: pointer;
+            height: 40px;
 
             a {
-              font-size: 24px;
-              color: @LightGray;
-              text-decoration: none;
-            }
-
-            &:hover {
-              background-color: @DarkGreen;
+              font-size: @Button_M;
             }
           }
         }
