--- a/styles.less
+++ b/styles.less
@@ -373,7 +373,7 @@ body {
               width: 60px;
               height: 60px;
               position: absolute;
-              bottom: -8%;
+              bottom: -30px;
               right: calc(50% - 30px);
               background-color: @DarkGreen;
               border: 4px solid @LightGray;
@@ -1039,70 +1039,32 @@ body {
       }
 
       .services {
-        .center();
-        width: 100%;
-        height: 100vh;
-        background-color: @LightGray;
+        padding: 32px 0;
 
         .content-services {
-          .center_column();
-          width: 70%;
-          height: 100%;
+          .between();
+          flex-direction: column;
 
           h1 {
-            font-size: @Title;
-            margin: 32px 0;
+            font-size: @Title_M;
+            margin: 0;
           }
 
           .group-cards-services {
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-            height: 60%;
-            max-height: 440px;
-            margin: 32px 0;
+            margin: 0;
 
             .cards-services {
-              width: 22%;
-              max-width: 325px;
-              height: 100%;
-              position: relative;
-
               p {
-                width: 100%;
-                position: absolute;
-                top: 0;
-                margin: 16px 0;
-                font-size: 28px;
-                text-align: center;
-                color: @LightGray;
-              }
-
-              img {
-                width: 100%;
-                height: 100%;
-              }
-
-              .circle-services {
-                width: 60px;
-                height: 60px;
-                position: absolute;
-                bottom: -8%;
-                right: calc(50% - 30px);
-                background-color: @DarkGreen;
-                border: 4px solid @LightGray;
-                border-radius: 50%;
+                font-size: 22px;
               }
             }
           }
 
           article {
-            text-align: center;
-            margin: 32px 0;
+            margin: 0;
 
             p {
-              font-size: @Paragraph_G;
-              margin: 8px 0;
+              font-size: @Paragraph_M;
             }
           }
         }
