--- a/styles.less
+++ b/styles.less
@@ -449,7 +449,7 @@ body {
             width: 60px;
             height: 60px;
             position: absolute;
-            bottom: -8%;
+            bottom: -30px;
             right: calc(50% - 30px);
             background-color: @SaturedGreen;
             border: 4px solid @LightGray;
@@ -1077,66 +1077,29 @@ body {
       }
 
       .benefits {
-        .center();
-        width: 100%;
-        height: 100vh;
-        background-color: @LightGray;
+        padding: 32px 0;
 
         .content-benefits {
-          .center_column();
-          width: 70%;
-          height: 100%;
+          .between();
+          flex-direction: column;
 
           h1 {
-            font-size: @Title;
-            margin: 32px 0;
+            font-size: @Title_M;
+            margin: 0;
           }
 
           .group-cards-benefits {
-            display: flex;
-            justify-content: space-evenly;
-            width: 100%;
-            height: 60%;
-            max-height: 400px;
-            margin: 32px 0;
-
-            .cards-benefits {
-              width: 25%;
-              max-width: 287px;
-              height: 100%;
-              position: relative;
-            }
+            margin: 0;
 
             p {
-              width: 100%;
-              position: absolute;
-              bottom: 10%;
-              font-size: 28px;
-              text-align: center;
-              color: @LightGray;
-            }
-
-            img {
-              width: 100%;
-              height: 100%;
-            }
-
-            .circle-benefits {
-              width: 60px;
-              height: 60px;
-              position: absolute;
-              bottom: -8%;
-              right: calc(50% - 30px);
-              background-color: @SaturedGreen;
-              border: 4px solid @LightGray;
-              border-radius: 50%;
+              bottom: 12%;
+              font-size: 24px;
             }
           }
 
           article {
-            width: 35%;
-            text-align: center;
-            margin: 32px 0;
+            width: 45%;
+            margin: 0;
 
             p {
               font-size: @Paragraph_G;
