--- a/styles.less
+++ b/styles.less
@@ -715,10 +715,8 @@ body {
       background-color: @DarkGreen;
 
       .portifolio-content {
-        display: flex;
+        .between();
         flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
         padding: 64px 0;
         width: 70%;
         height: 100%;
@@ -1146,6 +1144,7 @@ body {
 
           .group-form-text {
             margin-top: 32px;
+
             .form {
               padding: 16px 16px;
 
@@ -1227,30 +1226,19 @@ body {
       }
 
       .portifolio {
-        .center();
-        width: 100%;
-        height: 100vh;
-        background-color: @DarkGreen;
+        padding: 32px 0;
 
         .portifolio-content {
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-          align-items: center;
-          padding: 64px 0;
-          width: 70%;
-          height: 100%;
+          padding: 0;
 
           h1 {
-            font-size: @Title;
+            font-size: @Title_M;
             color: @LightGray;
           }
 
           article {
-            width: 35%;
-            text-align: center;
-            font-size: @Paragraph_G;
-            color: @LightGray;
+            width: 60%;
+            font-size: @Paragraph_M;
           }
 
           .carousel {
