--- a/styles.less
+++ b/styles.less
@@ -1346,89 +1346,52 @@ body {
       }
 
       footer {
-        width: 100%;
-        height: 70vh;
-
         .content-footer {
-          .center();
-          width: 100%;
-          height: 90%;
-          background-image: url("img/BANNER_ORÇAMENTOS-2.png");
-          background-size: cover;
-
           .about-us-footer {
-            width: 20%;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-evenly;
-            padding: 16px 0;
-
             img {
-              width: 140px;
+              width: 120px;
               height: 90px;
             }
 
             article {
               p {
-                color: @LightGray;
-                margin: 8px 0;
+                font-size: 12px;
               }
             }
 
             .contacts-icons {
-              display: flex;
-
               a {
                 img {
-                  margin: 0 4px;
-                  width: 32px;
-                  height: 32px;
+                  width: 22px;
+                  height: 22px;
                 }
               }
             }
           }
 
           .services-footer {
-            .center();
-            width: 20%;
-            height: 100%;
-            margin: 0 32px;
-
             ul {
-              width: fit-content;
-
               li {
-                margin: 16px 0;
-                list-style: none;
-                color: @LightGray;
+                font-size: 12px;
               }
             }
           }
 
           .nav-footer {
-            .center();
-            width: 20%;
-            height: 100%;
-
             nav {
-              width: fit-content;
-
               span {
-                color: @LightGray;
+                font-size: 12px;
               }
 
               ul {
-                width: fit-content;
-                margin: 0 18px;
-
                 li {
-                  color: @LightGray;
-                  margin: 16px 0;
+                  font-size: 12px;
+                  margin: 8px 0;
 
                   a {
-                    text-decoration: none;
-                    color: @LightGray;
+                    &:hover {
+                      text-decoration: underline;
+                    }
                   }
                 }
               }
