--- a/styles.less
+++ b/styles.less
@@ -17,10 +17,12 @@
 //Fonts
 @Paragraph_G: 20px;
 @Paragraph_M: 18px;
+@Paragraph16: 16px;
 @Title: 50px;
 @Title_M: 35px;
 @SubTitle_M: 22px;
 @Button_M: 20px;
+@Button18: 18px;
 
 //Mixins
 .center {
@@ -968,6 +970,476 @@ body {
 
                 a {
                   font-size: @Button_M;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      .services-locations {
+        .between();
+        flex-direction: column;
+        padding: 32px 0;
+
+        h1 {
+          font-size: @Title_M;
+        }
+
+        .group-cards {
+          .cards {
+            max-width: 270px;
+            max-height: 400px;
+
+            p {
+              font-size: 26px;
+            }
+          }
+        }
+
+        p {
+          width: 70%;
+          font-size: @Paragraph_M;
+        }
+      }
+
+      .about-us {
+        .about-us-content {
+          .text-about-us {
+            article {
+              h1 {
+                font-size: @Title_M;
+                color: @LightGray;
+              }
+
+              p {
+                color: @LightGray;
+                font-size: @Paragraph_M;
+              }
+            }
+          }
+        }
+      }
+
+      .quote-call {
+        .content-quote-call {
+          article {
+            p {
+              font-size: @Paragraph_M;
+            }
+          }
+
+          button {
+            height: 40px;
+
+            a {
+              font-size: @Button_M;
+            }
+          }
+        }
+      }
+
+      .services {
+        padding: 32px 0;
+
+        .content-services {
+          .between();
+          flex-direction: column;
+
+          h1 {
+            font-size: @Title_M;
+            margin: 0;
+          }
+
+          .group-cards-services {
+            margin: 0;
+
+            .cards-services {
+              p {
+                font-size: 22px;
+              }
+            }
+          }
+
+          article {
+            margin: 0;
+
+            p {
+              font-size: @Paragraph_M;
+            }
+          }
+        }
+      }
+
+      .quote-call-ii {
+        width: 100%;
+        height: 951px;
+        background-color: red;
+      }
+
+      .benefits {
+        padding: 32px 0;
+
+        .content-benefits {
+          .between();
+          flex-direction: column;
+
+          h1 {
+            font-size: @Title_M;
+            margin: 0;
+          }
+
+          .group-cards-benefits {
+            margin: 0;
+
+            p {
+              bottom: 12%;
+              font-size: 24px;
+            }
+          }
+
+          article {
+            width: 45%;
+            margin: 0;
+
+            p {
+              font-size: @Paragraph_G;
+            }
+          }
+        }
+      }
+
+      .faq {
+        .faq-content {
+          .faq-text {
+            h1 {
+              font-size: @Title_M;
+            }
+
+            p {
+              font-size: @Paragraph_M;
+            }
+          }
+
+          .faq-questions {
+            .question {
+              .question-content {
+                p {
+                  font-size: 16px;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      .contacts {
+        .contacts-content {
+          .center_column();
+          width: 70%;
+          height: 100%;
+
+          h1 {
+            font-size: @Title_M;
+            margin: 0;
+          }
+
+          .group-form-text {
+            margin-top: 32px;
+
+            .form {
+              padding: 16px 16px;
+
+              h2 {
+                margin: 8px 0;
+                font-size: @SubTitle_M;
+              }
+
+              form {
+                width: 90%;
+                height: 80%;
+
+                .group-input {
+                  input {
+                    height: 35px;
+                    font-size: 15px;
+
+                    &::placeholder {
+                      font-size: 15px;
+                    }
+                  }
+
+                  select {
+                    height: 35px;
+                    font-size: 15px;
+                  }
+
+                  .check-discard {
+                    margin: 16px 0;
+
+                    input {
+                      width: 16px;
+                      height: 16px;
+                    }
+
+                    label {
+                      margin: 0 4px;
+                      font-size: 16px;
+                    }
+
+                    abbr {
+                      img {
+                        width: 16px;
+                        height: 16px;
+                      }
+                    }
+                  }
+                }
+
+                .form-button {
+                  height: 40px;
+                  font-size: 16px;
+                }
+              }
+            }
+
+            .text-contact {
+              article {
+                h2 {
+                  font-size: @SubTitle_M;
+                }
+
+                p {
+                  font-size: @Paragraph_M;
+                }
+              }
+
+              .group-icons {
+                margin: 16px 0;
+
+                img {
+                  width: 24px;
+                  height: 24px;
+                }
+              }
+            }
+          }
+        }
+      }
+
+      .portifolio {
+        padding: 32px 0;
+
+        .portifolio-content {
+          padding: 0;
+
+          h1 {
+            font-size: @Title_M;
+            color: @LightGray;
+          }
+
+          article {
+            width: 60%;
+            font-size: @Paragraph_M;
+          }
+
+          .carousel {
+            height: 60%;
+            width: 100%;
+            position: relative;
+
+            .carousel-container {
+              width: 80%;
+              height: 100%;
+              display: flex;
+              align-items: center;
+              margin: 0 auto;
+              position: relative;
+
+              .carousel-item {
+                height: 100%;
+                opacity: 0;
+                position: absolute;
+                transition: all 0.3s ease-in-out;
+                width: 30%;
+                border: 2px solid @LightGray;
+              }
+
+              .carousel-item-1 {
+                left: 15%;
+
+                opacity: 0.4;
+                transform: translateX(-50%);
+              }
+
+              .carousel-item-2,
+              .carousel-item-4 {
+                height: 100%;
+                opacity: 0.9;
+                width: 30%;
+                z-index: 1;
+              }
+
+              .carousel-item-2 {
+                left: 30%;
+                transform: translateX(-50%);
+              }
+
+              .carousel-item-3 {
+                box-shadow: -2px 5px 33px 6px rgba(0, 0, 0, 0.35);
+                height: 100%;
+                opacity: 1;
+                left: 50%;
+                transform: translateX(-50%);
+                width: 30%;
+                z-index: 2;
+              }
+
+              .carousel-item-4 {
+                left: 70%;
+                transform: translateX(-50%);
+              }
+
+              .carousel-item-5 {
+                left: 85%;
+                opacity: 0.4;
+                transform: translateX(-50%);
+              }
+            }
+
+            .carousel-controls {
+              position: absolute;
+              top: calc(50% - 25px);
+              display: flex;
+              justify-content: space-between;
+              height: fit-content;
+              width: 100%;
+
+              button {
+                .center();
+                background-color: @Green;
+                border: 0;
+                margin: 0 64px;
+                cursor: pointer;
+                font-size: 30px;
+
+                .left {
+                  transform: rotate(90deg);
+                }
+                .right {
+                  transform: rotate(270deg);
+                }
+              }
+
+              .carousel-controls-previous {
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+              }
+
+              .carousel-controls-next {
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+              }
+            }
+          }
+        }
+      }
+
+      footer {
+        .content-footer {
+          .about-us-footer {
+            img {
+              width: 120px;
+              height: 90px;
+            }
+
+            article {
+              p {
+                font-size: 12px;
+              }
+            }
+
+            .contacts-icons {
+              a {
+                img {
+                  width: 22px;
+                  height: 22px;
+                }
+              }
+            }
+          }
+
+          .services-footer {
+            ul {
+              li {
+                font-size: 12px;
+              }
+            }
+          }
+
+          .nav-footer {
+            nav {
+              span {
+                font-size: 12px;
+              }
+
+              ul {
+                li {
+                  font-size: 12px;
+                  margin: 8px 0;
+
+                  a {
+                    &:hover {
+                      text-decoration: underline;
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+
+        .copy {
+          width: 100%;
+          height: 10%;
+          background-color: @Green;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  body {
+    main {
+      .banner {
+        .banner-logo {
+          .logo-presentation {
+            padding: 0;
+            margin: 0 32px 0 0;
+
+            .logo-img {
+              img {
+                max-width: 180px;
+              }
+            }
+
+            .text-presentation {
+              h1 {
+                font-size: 20px;
+              }
+
+              p {
+                font-size: @Paragraph16;
+              }
+
+              button {
+                height: 40px;
+
+                a {
+                  font-size: @Button18;
                 }
               }
             }
