--- a/styles.less
+++ b/styles.less
@@ -987,6 +987,7 @@ body {
         }
 
         .group-cards {
+          margin: 0;
           .cards {
             max-width: 270px;
             max-height: 400px;
@@ -1458,18 +1459,18 @@ body {
 
         .group-cards {
           .cards {
-            max-width: 270px;
+            max-width: 230px;
             max-height: 400px;
 
             p {
-              font-size: 26px;
+              font-size: 24px;
             }
           }
         }
 
         p {
-          width: 70%;
-          font-size: @Paragraph_M;
+          width: 80%;
+          font-size: @Paragraph16;
         }
       }
 
