Resposividade sobre-nos (1024)

--- a/styles.less
+++ b/styles.less
@@ -1489,6 +1489,12 @@ body {
               }
             }
           }
+
+          .img-about-us {
+            img {
+              max-height: 380px;
+            }
+          }
         }
       }
 
