--- a/styles.less
+++ b/styles.less
@@ -1501,8 +1501,10 @@ body {
       .quote-call {
         .content-quote-call {
           article {
+            margin: 0 0 8px 0;
             p {
               font-size: @Paragraph_M;
+              margin: 8px 0;
             }
           }
 
