--- a/styles.less
+++ b/styles.less
@@ -1535,7 +1535,7 @@ body {
 
             .cards-services {
               p {
-                font-size: 22px;
+                font-size: 20px;
               }
             }
           }
@@ -1544,7 +1544,7 @@ body {
             margin: 0;
 
             p {
-              font-size: @Paragraph_M;
+              font-size: @Paragraph16;
             }
           }
         }
