--- a/styles.less
+++ b/styles.less
@@ -1560,9 +1560,6 @@ body {
         padding: 32px 0;
 
         .content-benefits {
-          .between();
-          flex-direction: column;
-
           h1 {
             font-size: @Title_M;
             margin: 0;
@@ -1573,16 +1570,16 @@ body {
 
             p {
               bottom: 12%;
-              font-size: 24px;
+              font-size: 22px;
             }
           }
 
           article {
-            width: 45%;
+            width: 50%;
             margin: 0;
 
             p {
-              font-size: @Paragraph_G;
+              font-size: @Paragraph16;
             }
           }
         }
