--- a/styles.less
+++ b/styles.less
@@ -1593,7 +1593,7 @@ body {
             }
 
             p {
-              font-size: @Paragraph_M;
+              font-size: @Paragraph16;
             }
           }
 
@@ -1603,6 +1603,12 @@ body {
                 p {
                   font-size: 16px;
                 }
+              }
+            }
+
+            .answer {
+              p {
+                font-size: 14px;
               }
             }
           }
