--- a/styles.less
+++ b/styles.less
@@ -21,6 +21,7 @@
 @Title: 50px;
 @Title_M: 35px;
 @SubTitle_M: 22px;
+@SubTitle18: 18px;
 @Button_M: 20px;
 @Button18: 18px;
 
@@ -1633,12 +1634,12 @@ body {
               padding: 16px 16px;
 
               h2 {
-                margin: 8px 0;
-                font-size: @SubTitle_M;
+                margin: 4px 0;
+                font-size: @SubTitle18;
               }
 
               form {
-                width: 90%;
+                width: 100%;
                 height: 80%;
 
                 .group-input {
@@ -1660,13 +1661,13 @@ body {
                     margin: 16px 0;
 
                     input {
-                      width: 16px;
-                      height: 16px;
+                      width: 14px;
+                      height: 14px;
                     }
 
                     label {
                       margin: 0 4px;
-                      font-size: 16px;
+                      font-size: 14px;
                     }
 
                     abbr {
@@ -1679,7 +1680,7 @@ body {
                 }
 
                 .form-button {
-                  height: 40px;
+                  height: 30px;
                   font-size: 16px;
                 }
               }
@@ -1688,11 +1689,11 @@ body {
             .text-contact {
               article {
                 h2 {
-                  font-size: @SubTitle_M;
+                  font-size: 20px;
                 }
 
                 p {
-                  font-size: @Paragraph_M;
+                  font-size: @Paragraph16;
                 }
               }
 
@@ -1700,8 +1701,8 @@ body {
                 margin: 16px 0;
 
                 img {
-                  width: 24px;
-                  height: 24px;
+                  width: 22px;
+                  height: 22px;
                 }
               }
             }
@@ -1721,7 +1722,7 @@ body {
           }
 
           article {
-            width: 60%;
+            width: 70%;
             font-size: @Paragraph_M;
           }
 
