Ajustes de largura

--- a/styles.less
+++ b/styles.less
@@ -514,6 +514,7 @@ body {
 
             .question-content {
               .between();
+              min-width: 345px;
               height: 50px;
               padding: 16px;
               background-color: @SaturedGreen;
@@ -593,7 +594,9 @@ body {
           .form {
             width: 30%;
             max-width: 400px;
+            min-width: 235px;
             height: 100%;
+            max-height: 450px;
             padding: 32px;
             text-align: center;
             background-color: @SaturedGreen;
@@ -1151,6 +1154,7 @@ body {
 
             .form {
               padding: 16px 16px;
+              min-width: 255px;
 
               h2 {
                 margin: 8px 0;
@@ -1494,6 +1498,7 @@ body {
           .img-about-us {
             img {
               max-height: 380px;
+              min-width: 260px;
             }
           }
         }
@@ -1535,6 +1540,8 @@ body {
             margin: 0;
 
             .cards-services {
+              min-width: 130px;
+
               p {
                 font-size: 20px;
               }
@@ -1562,12 +1569,14 @@ body {
 
         .content-benefits {
           h1 {
-            font-size: @Title_M;
             margin: 0;
           }
 
           .group-cards-benefits {
             margin: 0;
+            .cards-benefits {
+              min-width: 160px;
+            }
 
             p {
               bottom: 12%;
@@ -1667,7 +1676,7 @@ body {
 
                     label {
                       margin: 0 4px;
-                      font-size: 14px;
+                      font-size: 16px;
                     }
 
                     abbr {
