--- a/styles.less
+++ b/styles.less
@@ -1903,55 +1903,30 @@ body {
       }
 
       .services-locations {
-        .center_column();
-        width: 100%;
-        height: 100vh;
+        .between();
+        flex-direction: column;
 
         h1 {
-          font-size: 50px;
+          font-size: 30px;
         }
 
         .group-cards {
-          display: flex;
-          justify-content: center;
-          width: 100%;
-          height: 70%;
-          padding: 0 10%;
-          margin: 32px 0 16px 0;
+          .center();
+          margin: 0;
 
           .cards {
-            width: 33%;
-            max-width: 414px;
-            height: 100%;
-            max-height: 648px;
-            position: relative;
-            background-color: @SaturedGreen;
-            border: none;
-
-            img {
-              width: 100%;
-              height: 100%;
-            }
+            max-width: 180px;
+            max-height: 280px;
 
             p {
-              width: 100%;
-              position: absolute;
-              bottom: 0;
-              margin: 0 0 16px 0;
-              font-size: 30px;
-              color: @LightGray;
-            }
-
-            &:nth-child(2) {
-              margin: 0 16px;
+              font-size: 22px;
             }
           }
         }
 
         p {
-          width: 65%;
-          text-align: center;
-          font-size: @Paragraph_G;
+          width: 70%;
+          font-size: @Paragraph16;
         }
       }
 
