--- a/styles.less
+++ b/styles.less
@@ -1932,44 +1932,43 @@ body {
 
       .about-us {
         .center();
-        width: 100%;
-        height: 90vh;
-        background-color: @DarkGreen;
+        height: 150vh;
+        padding: 32px 0;
 
         .about-us-content {
-          .center();
-          width: 70%;
+          .center_column();
+          width: 80%;
           height: 100%;
 
           .text-about-us {
             .center();
-            width: 50%;
-            height: 60%;
+            width: 100%;
+            height: 50%;
 
             article {
               width: 90%;
+              text-align: center;
 
               h1 {
-                font-size: @Title;
+                font-size: 30px;
                 color: @LightGray;
                 margin-bottom: 32px;
               }
 
               p {
-                color: @LightGray;
-                font-size: @Paragraph_G;
+                font-size: @Paragraph16;
               }
             }
           }
 
           .img-about-us {
-            width: 50%;
-            height: 80%;
+            width: 80%;
+            height: 50%;
             display: flex;
-            justify-content: end;
+            justify-content: center;
 
             img {
-              width: 70%;
+              width: 60%;
               height: 100%;
             }
           }
