--- a/styles.less
+++ b/styles.less
@@ -2005,69 +2005,38 @@ body {
       }
 
       .services {
-        .center();
-        width: 100%;
-        height: 100vh;
-        background-color: @LightGray;
+        height: fit-content;
 
         .content-services {
-          .center_column();
-          width: 70%;
-          height: 100%;
+          .between();
+          flex-direction: column;
+          width: 80%;
 
           h1 {
-            font-size: @Title;
-            margin: 32px 0;
+            font-size: 30px;
           }
 
           .group-cards-services {
             display: flex;
-            justify-content: space-between;
+            flex-direction: column;
+            align-items: center;
             width: 100%;
-            height: 60%;
-            max-height: 440px;
-            margin: 32px 0;
+            max-height: none;
 
             .cards-services {
-              width: 22%;
+              margin: 32px 0;
+              width: 40%;
               max-width: 325px;
-              height: 100%;
-              position: relative;
-
-              p {
-                width: 100%;
-                position: absolute;
-                top: 0;
-                margin: 16px 0;
-                font-size: 28px;
-                text-align: center;
-                color: @LightGray;
-              }
-
-              img {
-                width: 100%;
-                height: 100%;
-              }
-
-              .circle-services {
-                width: 60px;
-                height: 60px;
-                position: absolute;
-                bottom: -30px;
-                right: calc(50% - 30px);
-                background-color: @DarkGreen;
-                border: 4px solid @LightGray;
-                border-radius: 50%;
-              }
+              height: 25%;
             }
           }
 
           article {
             text-align: center;
-            margin: 32px 0;
+            margin: 0;
 
             p {
-              font-size: @Paragraph_G;
+              font-size: @Paragraph16;
               margin: 8px 0;
             }
           }
