--- a/styles.less
+++ b/styles.less
@@ -2032,7 +2032,6 @@ body {
           }
 
           article {
-            text-align: center;
             margin: 0;
 
             p {
@@ -2050,69 +2049,43 @@ body {
       }
 
       .benefits {
-        .center();
-        width: 100%;
-        height: 100vh;
-        background-color: @LightGray;
+        padding: 32px 0;
+        height: fit-content;
 
         .content-benefits {
-          .center_column();
-          width: 70%;
-          height: 100%;
+          .between();
+          flex-direction: column;
+          width: 80%;
 
           h1 {
-            font-size: @Title;
-            margin: 32px 0;
+            font-size: 30px;
+            margin: 0;
           }
 
           .group-cards-benefits {
-            display: flex;
-            justify-content: space-evenly;
-            width: 100%;
-            height: 60%;
-            max-height: 400px;
-            margin: 32px 0;
+            flex-direction: column;
+            align-items: center;
+            max-height: none;
+            margin: 0;
 
             .cards-benefits {
-              width: 25%;
-              max-width: 287px;
-              height: 100%;
-              position: relative;
+              width: 40%;
+              height: 33%;
+              margin: 32px 0;
             }
 
             p {
-              width: 100%;
-              position: absolute;
-              bottom: 10%;
-              font-size: 28px;
-              text-align: center;
-              color: @LightGray;
-            }
-
-            img {
-              width: 100%;
-              height: 100%;
-            }
-
-            .circle-benefits {
-              width: 60px;
-              height: 60px;
-              position: absolute;
-              bottom: -30px;
-              right: calc(50% - 30px);
-              background-color: @SaturedGreen;
-              border: 4px solid @LightGray;
-              border-radius: 50%;
+              bottom: 15%;
+              font-size: 20px;
             }
           }
 
           article {
-            width: 35%;
-            text-align: center;
-            margin: 32px 0;
+            width: 50%;
+            margin: 16px 0;
 
             p {
-              font-size: @Paragraph_G;
+              font-size: @Paragraph16;
             }
           }
         }
