--- a/styles.less
+++ b/styles.less
@@ -2118,60 +2118,50 @@ body {
       }
 
       .contacts {
-        .center();
-        width: 100%;
-        height: 80vh;
-        background-color: @LightGray;
+        height: 150vh;
+        padding: 32px 0;
 
         .contacts-content {
           .center_column();
-          width: 70%;
+          width: 80%;
           height: 100%;
 
           h1 {
-            font-size: @Title;
-            margin: 32px 0;
+            font-size: 30px;
+            margin: 0 0 32px;
           }
 
           .group-form-text {
             display: flex;
-            justify-content: space-evenly;
-            width: 100%;
-            height: 65%;
+            flex-direction: column;
+            align-items: center;
+            justify-content: space-between;
+            height: 100%;
+            margin: 0;
 
             .form {
-              width: 30%;
-              max-width: 400px;
+              width: 40%;
+              max-width: 280px;
               min-width: 235px;
-              height: 100%;
-              max-height: 450px;
-              padding: 32px;
-              text-align: center;
-              background-color: @SaturedGreen;
+              height: 75%;
+              max-height: 350px;
+              padding: 32px 16px;
 
               h2 {
-                margin: 32px 0;
-                color: @LightGray;
-                font-size: 30px;
+                margin: 0;
+                font-size: 20px;
               }
 
               form {
-                margin: 0 auto;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-                width: 90%;
-                height: 70%;
+                width: 100%;
+                height: 90%;
 
                 .group-input {
                   width: 100%;
-                  margin-top: 16px;
+                  margin-top: 32px;
 
                   input {
-                    width: 100%;
-                    height: 50px;
-                    padding: 8px;
-                    border: none;
+                    height: 40px;
 
                     &::placeholder {
                       font-size: 16px;
@@ -2179,74 +2169,54 @@ body {
                   }
 
                   select {
-                    width: 100%;
-                    height: 50px;
-                    margin: 8px 0;
-                    padding: 8px;
-                    border: none;
+                    height: 40px;
                     font-size: 16px;
                   }
 
                   .check-discard {
-                    .center();
-                    margin: 32px 0;
+                    margin: 16px 0;
 
                     input {
-                      width: 20px;
-                      height: 20px;
-                      cursor: pointer;
+                      width: 16px;
+                      height: 16px;
                     }
 
                     label {
-                      margin: 0 8px;
-                      color: @LightGray;
-                      font-size: @Paragraph_G;
-                      cursor: pointer;
+                      margin: 0 4px;
+                      font-size: @Paragraph16;
                     }
 
                     abbr {
-                      .center();
-
                       img {
-                        width: 22px;
-                        height: 22px;
+                        width: 18px;
+                        height: 18px;
                       }
                     }
                   }
                 }
 
                 .form-button {
-                  width: 50%;
-                  height: 50px;
-                  margin: 0 auto;
-                  border: none;
-                  font-size: 18px;
-                  font-weight: bold;
-                  cursor: pointer;
-
-                  &:hover {
-                    background-color: #fff;
-                  }
+                  height: 40px;
+                  font-size: 16px;
                 }
               }
             }
 
             .text-contact {
-              display: flex;
-              flex-direction: column;
-              justify-content: center;
-              width: 40%;
-              height: 100%;
+              align-items: center;
+              width: 100%;
+              height: 75%;
 
               article {
-                width: 90%;
+                text-align: center;
 
                 h2 {
-                  font-size: 30px;
+                  font-size: 22px;
                 }
 
                 p {
-                  font-size: @Paragraph_G;
+                  font-size: @Paragraph16;
+                  margin: 0 auto;
                 }
               }
 
