--- a/styles.less
+++ b/styles.less
@@ -2233,128 +2233,45 @@ body {
       }
 
       .portifolio {
-        .center();
-        width: 100%;
         height: 100vh;
-        background-color: @DarkGreen;
 
         .portifolio-content {
           .between();
           flex-direction: column;
-          padding: 64px 0;
-          width: 70%;
+          padding: 0;
+          width: 80%;
           height: 100%;
 
           h1 {
-            font-size: @Title;
-            color: @LightGray;
+            font-size: 30px;
           }
 
           article {
-            width: 35%;
-            text-align: center;
-            font-size: @Paragraph_G;
-            color: @LightGray;
+            width: 80%;
+            font-size: @Paragraph16;
+            margin: 16px 0;
           }
 
           .carousel {
-            height: 60%;
-            width: 100%;
-            position: relative;
-
             .carousel-container {
-              width: 80%;
-              height: 100%;
-              display: flex;
-              align-items: center;
-              margin: 0 auto;
-              position: relative;
+              width: 90%;
 
               .carousel-item {
-                height: 100%;
-                opacity: 0;
-                position: absolute;
-                transition: all 0.3s ease-in-out;
-                width: 30%;
-                border: 2px solid @LightGray;
-              }
-
-              .carousel-item-1 {
-                left: 15%;
-
-                opacity: 0.4;
-                transform: translateX(-50%);
-              }
-
-              .carousel-item-2,
-              .carousel-item-4 {
-                height: 100%;
-                opacity: 0.9;
-                width: 30%;
-                z-index: 1;
-              }
-
-              .carousel-item-2 {
-                left: 30%;
-                transform: translateX(-50%);
-              }
-
-              .carousel-item-3 {
-                box-shadow: -2px 5px 33px 6px rgba(0, 0, 0, 0.35);
-                height: 100%;
-                opacity: 1;
-                left: 50%;
-                transform: translateX(-50%);
-                width: 30%;
-                z-index: 2;
-              }
-
-              .carousel-item-4 {
-                left: 70%;
-                transform: translateX(-50%);
-              }
-
-              .carousel-item-5 {
-                left: 85%;
-                opacity: 0.4;
-                transform: translateX(-50%);
+                min-width: 160px;
               }
             }
 
             .carousel-controls {
-              position: absolute;
-              top: calc(50% - 25px);
-              display: flex;
-              justify-content: space-between;
-              height: fit-content;
-              width: 100%;
-
-              button {
-                .center();
-                background-color: @Green;
-                border: 0;
-                margin: 0 64px;
-                cursor: pointer;
-                font-size: 30px;
-
-                .left {
-                  transform: rotate(90deg);
-                }
-                .right {
-                  transform: rotate(270deg);
-                }
-              }
+              z-index: 500;
 
               .carousel-controls-previous {
-                width: 50px;
-                height: 50px;
-                border-radius: 50%;
+                width: 40px;
+                height: 40px;
               }
 
               .carousel-controls-next {
-                width: 50px;
-                height: 50px;
-                border-radius: 50%;
+                width: 40px;
+                height: 40px;
               }
             }
           }
