Tablet Ajustes Header

--- a/styles.less
+++ b/styles.less
@@ -1808,12 +1808,8 @@ body {
                 font-size: 16px;
               }
 
-              button {
-                width: 100px;
-
-                a {
-                  font-size: 16px;
-                }
+              &:nth-child(7) {
+                display: none;
               }
             }
           }
