Tablet Ajuste Sobre-nos

--- a/styles.less
+++ b/styles.less
@@ -1912,6 +1912,7 @@ body {
 
           .cards {
             max-width: 180px;
+            min-width: 145px;
             max-height: 280px;
 
             p {
@@ -1928,7 +1929,7 @@ body {
 
       .about-us {
         .center();
-        height: 150vh;
+        height: fit-content;
         padding: 32px 0;
 
         .about-us-content {
@@ -1940,6 +1941,7 @@ body {
             .center();
             width: 100%;
             height: 50%;
+            margin-bottom: 32px;
 
             article {
               width: 90%;
