Tablet Ajustes orçamento

--- a/styles.less
+++ b/styles.less
@@ -1975,15 +1975,16 @@ body {
 
       .quote-call {
         background-size: 100% 100%;
+        padding: 16px 0;
 
         .content-quote-call {
           .center_column();
-          width: 50%;
+          width: 60%;
           height: 100%;
 
           article {
             text-align: center;
-            margin: 0 0 16px 0;
+            margin: 0;
 
             p {
               font-size: @Paragraph16;
