Tablet Ajustes Contatos

--- a/styles.less
+++ b/styles.less
@@ -2220,7 +2220,7 @@ body {
               }
 
               .group-icons {
-                margin: 32px 0;
+                margin: 32px 0 0;
 
                 img {
                   margin: 0 4px;
