--- a/styles.less
+++ b/styles.less
@@ -2354,18 +2354,27 @@ body {
   }
 }
 
-@media (max-width: 780px) {
+@media (max-width: 480px) {
   body {
     main {
       header {
         height: 64px;
         nav {
-          width: 90%;
+          width: 100%;
 
           ul {
             li {
               a {
-                font-size: 16px;
+                font-size: @Paragraph_P;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                img {
+                  width: 22px;
+                  height: 22px;
+                  margin-bottom: 0;
+                }
               }
 
               &:nth-child(7) {
