--- a/styles.less
+++ b/styles.less
@@ -2354,27 +2354,18 @@ body {
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 780px) {
   body {
     main {
       header {
         height: 64px;
         nav {
-          width: 100%;
+          width: 90%;
 
           ul {
             li {
               a {
-                font-size: @Paragraph_P;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-
-                img {
-                  width: 22px;
-                  height: 22px;
-                  margin-bottom: 0;
-                }
+                font-size: 16px;
               }
 
               &:nth-child(7) {
